hphp/hack/test/typecheck/catch_alias.php.exp
File "catch_alias.php", line 9, characters 12-25:
Expected a `class` but got a type alias. (Naming[2052])
  File "catch_alias.php", line 3, characters 6-19:
  Alias definition is here.
